plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'tukorea-2024-s3-10'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
	implementation 'io.jsonwebtoken:jjwt:0.12.3'
	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// OAuth2 Client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-core:5.15.2'
	implementation 'com.google.guava:guava:33.4.0-jre'
}

tasks.named('test') {
	useJUnitPlatform()
}
